# rust-fontawesome

./: .gitignore  Cargo.toml  README.md  build.rs  deny.toml
.github/workflows/: ci.yml
examples/: url.rs
examples/egui-example/: Cargo.toml
examples/egui-example/src/: main.rs
src/: icon.rs  icon.rs.tera  lib.rs
