[package]
name = "rust-fontawesome-icons"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bircni/rust-fontawesome"
description = "Get all usable Font Awesome icons."
authors = ["bircni"]
license = "MIT"
exclude = ["examples/*"]
keywords = ["font-awesome", "icons", "url"]

[features]
default = ["std"]
std = []

[build-dependencies]
anyhow = "1"
convert_case = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tera = { version = "1.20.0", default-features = false }
tokio = { version = "1.42", features = ["macros"] }

[dev-dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["http", "svg"] }
rust-fontawesome-icons = { path = "." }

[workspace.lints.rust]
unsafe_code = "forbid"
deprecated = "warn"

[workspace.lints.clippy]
restriction = "warn"
complexity = "warn"
correctness = "warn"
nursery = "warn"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
