[package]
name = "rust-fontawesome-icons"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/bircni/rust-fontawesome"
description = "Get all usable Font Awesome icons."
authors = ["bircni"]
license = "MIT"
exclude = ["examples/*"]
keywords = ["font-awesome", "icons", "url"]

[features]
default = ["std"]
std = []

[build-dependencies]
anyhow = "1"
convert_case = "0.7"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
tera = { version = "1.20", default-features = false }
tokio = { version = "1.42", features = ["macros"] }

[dev-dependencies]
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["http", "svg"] }
rust-fontawesome-icons = { path = "." }

[workspace.lints.rust]
unsafe_code = "deny"
deprecated = "warn"
elided_lifetimes_in_paths = "warn"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"                         # `unsafe_op_in_unsafe_fn` may become the default in future Rust versions: https://github.com/rust-lang/rust/issues/71668
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
trivial_casts = "allow"
unused_qualifications = "allow"

[workspace.lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"

[workspace.lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

# Additional lints from https://rust-lang.github.io/rust-clippy/master/index.html?groups=restriction
absolute_paths = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
create_dir = "warn"
clone_on_ref_ptr = "warn"
missing_assert_message = "warn"
panic_in_result_fn = "warn"
shadow_reuse = "warn"
str_to_string = "warn"
todo = "warn"
unimplemented = "warn"
wildcard_enum_match_arm = "warn"